# ChangeLog for dev-util/cvs
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cvs/ChangeLog,v 1.105 2006/03/20 17:54:42 pylon Exp $

  20 Mar 2006; Lars Weiler <pylon@gentoo.org> cvs-1.12.12-r3.ebuild,
  cvs-1.12.13.ebuild:
  Added support for gssapi as default with the kerberos-use-flag (thanks to
  exg for the hint) and build server support only when the server-use-flag is
  given.

*cvs-1.11.21 (07 Mar 2006)

  07 Mar 2006; Lars Weiler <pylon@gentoo.org> +cvs-1.11.21.ebuild:
  Version bump of upstream's stable branch.

  01 Mar 2006; Lars Weiler <pylon@gentoo.org> cvs-1.12.12-r3.ebuild,
  cvs-1.12.13.ebuild:
  Using the mirror://gnu works as well.  Fixes bug #124538.

  01 Mar 2006; Lars Weiler <pylon@gentoo.org>
  -files/cvs-1.11.18-klocwork.patch, -files/cvs-1.12.11-klocwork.patch,
  -files/cvs.pam, -files/cvs.pam-include, -cvs-1.11.17.ebuild,
  -cvs-1.11.18.ebuild, -cvs-1.11.18-r1.ebuild, -cvs-1.11.19.ebuild,
  -cvs-1.12.9.ebuild, -cvs-1.12.10.ebuild, -cvs-1.12.11.ebuild,
  -cvs-1.12.11-r1.ebuild, -cvs-1.12.12.ebuild, -cvs-1.12.12-r1.ebuild:
  Spring-clean

*cvs-1.12.13 (01 Mar 2006)

  01 Mar 2006; Lars Weiler <pylon@gentoo.org>
  +files/cvs-1.12.13-cvsbug-tmpfix.patch, +files/cvs-1.12.13-openat.patch,
  +cvs-1.12.13.ebuild:
  Add a new feature-version of cvs

*cvs-1.12.12-r3 (01 Mar 2006)

  01 Mar 2006; Lars Weiler <pylon@gentoo.org>
  +files/cvs-1.12.12-openat.patch, +cvs-1.12.12-r3.ebuild:
  Fixed bug #121820 and bug #124260.

  13 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> cvs-1.12.12-r2.ebuild:
  "Disable" NLS support; CVS is not using NLS support, and by leaving it to
  autodetect it makes it link against extra libraries while not using glibc.

  04 Sep 2005; Hardave Riar <hardave@gentoo.org> cvs-1.12.12-r2.ebuild:
  Stable on mips, bug #103661.

  28 Aug 2005; Marcus D. Hanwell <cryos@gentoo.org> cvs-1.12.12-r2.ebuild:
  Stable on amd64, bug 103661.
