@@ -1,6 +1,9 @@
-MD5 24da128cabb7405dad29c275b7e76171 ChangeLog 13348
-RMD160 94e655f52b1b8e1f4748bbcec4f4f69adfd04d9d ChangeLog 13348
-SHA256 162bce5db680a04510895e414e17c12cca71a05ac6990d8db2a816cde43155f6 ChangeLog 13348
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 0ce0f8f06a6a831b31f276d8acdf56b8 ChangeLog 13509
+RMD160 d1c0b22ff0a8ed70125d864d13b8f410da6314d3 ChangeLog 13509
+SHA256 7e264d948c7a63d33c782c2e7e051e35d3fcfe635396da4aab06e55d35eede92 ChangeLog 13509
 MD5 e007c9685e363504d93b0a25ee00a12e cvs-1.11.20.ebuild 1519
 RMD160 c089652f52f090df29e06e024a971d0d3bd31ccf cvs-1.11.20.ebuild 1519
 SHA256 6c76f56db0c976bb870fa8a903550f850faadb5a49bfbb15393d8a83228d4bac cvs-1.11.20.ebuild 1519
@@ -10,12 +13,12 @@ SHA256 753226d3b5fe2a17723ee54ed765db4477c8b1ae99d60fd263b67a76a8d34609 cvs-1.11
 MD5 6c8ef40bb324cdbd552f4d400c139b0e cvs-1.12.12-r2.ebuild 1959
 RMD160 478234b15cc73c04ef870728344e08862e8bc9e4 cvs-1.12.12-r2.ebuild 1959
 SHA256 f899e2ab9829e0870124d226d8158861d7544a1c712ac0a30ff7d5f26de64ebd cvs-1.12.12-r2.ebuild 1959
-MD5 9a5fffcb1fc00a6d03fb8f2f4e515eec cvs-1.12.12-r3.ebuild 2069
-RMD160 44766a34d16d84d4a578338bd1dc413997941c10 cvs-1.12.12-r3.ebuild 2069
-SHA256 e5a873ba69e3ce4a8344f79ee4ac169ff8e0668201e55284091c54831f3e98d0 cvs-1.12.12-r3.ebuild 2069
-MD5 76b13957a0a06926e76edeeb9cb72f22 cvs-1.12.13.ebuild 2066
-RMD160 a5a8d9b8542b310b9079d7e2d57540dfab0ff2d8 cvs-1.12.13.ebuild 2066
-SHA256 9cdf6f2d2561610d17d8e38d821ba4d7efdf18c0526b2fe5f923801bedfeb0eb cvs-1.12.13.ebuild 2066
+MD5 055b52a1fdc4483bf0c87746a69265ac cvs-1.12.12-r3.ebuild 2069
+RMD160 7b6f8512ad06cce6548b93cbf704a93c430a1a70 cvs-1.12.12-r3.ebuild 2069
+SHA256 482b7fca761039136f8d133d72b871a5517a923c0f5931c8e40fb2f81209a668 cvs-1.12.12-r3.ebuild 2069
+MD5 73155835f39c13220243bcb73ea48974 cvs-1.12.13.ebuild 2066
+RMD160 b2644c544a80c4ebdad7cbf9a7d546c39f6f93b9 cvs-1.12.13.ebuild 2066
+SHA256 cceeb6d148270f4038b32eb04b2be0db1792861fdae1991eba55755efeec0ff8 cvs-1.12.13.ebuild 2066
 MD5 6b8fde892bfbca3d39d848430e5f4012 files/cvs-1.12.12-cvsbug-tmpfix.patch 624
 RMD160 c580f653ef9f294676aa4d766decaac50298b3c5 files/cvs-1.12.12-cvsbug-tmpfix.patch 624
 SHA256 061c26d140e1195200f1cc76217b2e7c2ff7f0c4dcbbb31124b386e8e756938e files/cvs-1.12.12-cvsbug-tmpfix.patch 624
@@ -52,3 +55,10 @@ SHA256 1e99eefe36659d1e6a9f690003de8ecafd0d9d057e814acf48e57b80cdc999a5 files/di
 MD5 5013179b1f3eab5b3127de8372c57a1a metadata.xml 162
 RMD160 4860626303bc1113a855a556455d3bdc9f21db79 metadata.xml 162
 SHA256 932a0c3bfb1ea371074cdf017dae98bb229959e68e98d4d19378564db2cfa3d3 metadata.xml 162
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.2.2 (GNU/Linux)
+
+iD8DBQFELCTQAiZjviIA2XgRAvtjAJ4wUkaQeHK8tMD8oJO6N6Db2UIxSACguAyi
+zm9MjeJYb1CcVzN6dRdmd3I=
+=zG8C
+-----END PGP SIGNATURE-----
