@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/cvs
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cvs/ChangeLog,v 1.105 2006/03/20 17:54:42 pylon Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cvs/ChangeLog,v 1.106 2006/03/30 18:34:43 flameeyes Exp $
+
+  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> cvs-1.12.12-r3.ebuild,
+  cvs-1.12.13.ebuild:
+  Add ~x86-fbsd keyword and drop virtual/libc dependency.
 
   20 Mar 2006; Lars Weiler <pylon@gentoo.org> cvs-1.12.12-r3.ebuild,
   cvs-1.12.13.ebuild:
